--- a/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.name.yml
+++ b/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.name.yml
@@ -11,7 +11,7 @@ bundle: all_games_category
 label: Name
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
