--- a/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.description.yml
+++ b/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.description.yml
@@ -13,7 +13,7 @@ bundle: all_games_category
 label: Description
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
