--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
@@ -8,48 +8,33 @@ dependencies:
     - taxonomy.vocabulary.all_games_category
   module:
     - image
-    - path
-    - text
 id: taxonomy_term.all_games_category.default
 targetEntityType: taxonomy_term
 bundle: all_games_category
 mode: default
 content:
-  description:
-    type: text_textfield
-    weight: 0
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_icon:
-    weight: 31
+    weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
+  translation:
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  description: true
+  langcode: true
+  path: true
