--- a/web/sites/jamboree-casino/config/sync/field.field.taxonomy_term.all_games_category.field_icon.yml
+++ b/web/sites/jamboree-casino/config/sync/field.field.taxonomy_term.all_games_category.field_icon.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.taxonomy_term.field_icon
     - taxonomy.vocabulary.all_games_category
   module:
+    - content_translation
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 id: taxonomy_term.all_games_category.field_icon
 field_name: field_icon
 entity_type: taxonomy_term
@@ -14,7 +21,7 @@ bundle: all_games_category
 label: Icon
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
