--- a/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.metatag.yml
+++ b/web/sites/jamboree-casino/config/sync/core.base_field_override.taxonomy_term.all_games_category.metatag.yml
@@ -1,13 +1,13 @@
-uuid: 19160568-dc86-4502-b684-0bb80c94db93
+uuid: 10073205-1f2f-4975-b209-150a2a80a331
 langcode: en
 status: true
 dependencies:
-  module:
-    - jamboree_arcade
-id: jamboree_arcade_game_entity.jamboree_arcade_game_entity.metatag
+  config:
+    - taxonomy.vocabulary.all_games_category
+id: taxonomy_term.all_games_category.metatag
 field_name: metatag
-entity_type: jamboree_arcade_game_entity
-bundle: jamboree_arcade_game_entity
+entity_type: taxonomy_term
+bundle: all_games_category
 label: Metatags
 description: 'The metatags for the entity.'
 required: false
