--- a/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type.yml
+++ b/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type.yml
@@ -1,17 +1,17 @@
-uuid: becc0f84-6032-499c-9f03-3382bc71ef0e
+uuid: 70bde60a-2138-4624-bf28-d67cb0b8e082
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.jamboree_desktop_games_entity.field_all_games_category
-    - taxonomy.vocabulary.all_games_category
+    - field.storage.jamboree_desktop_games_entity.field_game_type
+    - taxonomy.vocabulary.game_type
   module:
     - jamboree_desktop_games
-id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_all_games_category
-field_name: field_all_games_category
+id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type
+field_name: field_game_type
 entity_type: jamboree_desktop_games_entity
 bundle: jamboree_desktop_games_entity
-label: 'All Games Category'
+label: 'Game Type'
 description: ''
 required: false
 translatable: true
@@ -21,7 +21,7 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      all_games_category: all_games_category
+      game_type: game_type
     sort:
       field: name
       direction: asc
