--- a/web/sites/jamboree-casino/config/sync/field.storage.jamboree_desktop_games_entity.field_arcade_game_filter.yml
+++ b/web/sites/jamboree-casino/config/sync/field.storage.jamboree_desktop_games_entity.field_arcade_game_filter.yml
@@ -1,19 +1,19 @@
-uuid: dab659c6-b1c6-4d69-9839-c125e34356c3
+uuid: e031ac81-cdd4-489f-a474-bf84ded9597b
 langcode: en
 status: true
 dependencies:
   module:
-    - jamboree_arcade
+    - jamboree_desktop_games
     - taxonomy
-id: jamboree_arcade_game_entity.field_game_tag
-field_name: field_game_tag
-entity_type: jamboree_arcade_game_entity
+id: jamboree_desktop_games_entity.field_arcade_game_filter
+field_name: field_arcade_game_filter
+entity_type: jamboree_desktop_games_entity
 type: entity_reference
 settings:
   target_type: taxonomy_term
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
