--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.storage.jamboree_mobile_games_entity.field_all_games_category
+    - field.storage.jamboree_mobile_games_entity.field_arcade_game_category
+    - field.storage.jamboree_mobile_games_entity.field_arcade_game_filter
     - field.storage.jamboree_mobile_games_entity.field_client_type
     - field.storage.jamboree_mobile_games_entity.field_enable_free_play
     - field.storage.jamboree_mobile_games_entity.field_enable_game
@@ -16,6 +18,7 @@ dependencies:
     - field.storage.jamboree_mobile_games_entity.field_game_tag
     - field.storage.jamboree_mobile_games_entity.field_game_thumbnail
     - field.storage.jamboree_mobile_games_entity.field_game_title
+    - field.storage.jamboree_mobile_games_entity.field_game_type
     - taxonomy.vocabulary.game_provider
     - taxonomy.vocabulary.game_tag
     - taxonomy.vocabulary.mobile_game_category
@@ -1302,6 +1305,15 @@ display:
             field_all_games_category_export:
               alias: all_games_categories
               raw_output: false
+            field_arcade_game_category_export:
+              alias: arcade_game_category
+              raw_output: false
+            field_arcade_game_filter_export:
+              alias: arcade_game_filter
+              raw_output: false
+            field_game_type_export:
+              alias: game_type
+              raw_output: false
       fields:
         id:
           id: id
@@ -2118,6 +2130,187 @@ display:
           delta_first_last: 0
           field_api_classes: 0
           plugin_id: field_export
+        field_arcade_game_category_export:
+          id: field_arcade_game_category_export
+          table: jamboree_mobile_games_entity__field_arcade_game_category
+          field: field_arcade_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_arcade_game_filter_export:
+          id: field_arcade_game_filter_export
+          table: jamboree_mobile_games_entity__field_arcade_game_filter
+          field: field_arcade_game_filter_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_type_export:
+          id: field_game_type_export
+          table: jamboree_mobile_games_entity__field_game_type
+          field: field_game_type_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       defaults:
         fields: false
         filters: false
@@ -2233,6 +2426,8 @@ display:
         - url.query_args
       tags:
         - 'config:field.storage.jamboree_mobile_games_entity.field_all_games_category'
+        - 'config:field.storage.jamboree_mobile_games_entity.field_arcade_game_category'
+        - 'config:field.storage.jamboree_mobile_games_entity.field_arcade_game_filter'
         - 'config:field.storage.jamboree_mobile_games_entity.field_client_type'
         - 'config:field.storage.jamboree_mobile_games_entity.field_enable_free_play'
         - 'config:field.storage.jamboree_mobile_games_entity.field_enable_game'
@@ -2244,3 +2439,4 @@ display:
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_tag'
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_thumbnail'
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_title'
+        - 'config:field.storage.jamboree_mobile_games_entity.field_game_type'
