DFGMS-15 FGHub Flow Gaming Integration

--- a/web/modules/custom/webcomposer_settings/config/install/webcomposer_settings.form_fields_filter_settings.yml
+++ b/web/modules/custom/webcomposer_settings/config/install/webcomposer_settings.form_fields_filter_settings.yml
@@ -122,6 +122,9 @@ icore_games_integration__ebet_country: 1
 icore_games_integration__cq9_currency: 1
 icore_games_integration__cq9_language_mapping: 1
 icore_games_integration__cq9_country: 1
+icore_games_integration__fghub_gaming_currency: 1
+icore_games_integration__fghub_gaming_language_mapping: 1
+icore_games_integration__fghub_gaming_country: 1
 icore_games_integration__solid_gaming_currency: 1
 icore_games_integration__solid_gaming_language_mapping: 1
 icore_games_integration__solid_gaming_country: 1
