--- a/web/sites/games/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/games/config/sync/webcomposer_config.icore_games_integration.yml
@@ -60,7 +60,7 @@ gameworx_quicklotto_plugin_id: ''
 gameworx_quicklotto_operator_id: ''
 gameworx_quicklotto_lobby_type: ''
 gameworx_quicklotto_country: ''
-icore_games_integration_form__active_tab: edit-jsystem
+icore_games_integration_form__active_tab: edit-fghub-gaming
 asia_gaming_country: ''
 kiron_virtual_sports_country: ''
 gb_virtual_sports_country: ''
@@ -121,3 +121,6 @@ onegame_country: ''
 jsystem_currency: "CNY\r\nRMB\r\nEUR\r\nJPY\r\nVND\r\nMYR\r\nIDR\r\nGBP\r\nTHB\r\nTRY\r\nmBC\r\nMMK\r\nINR\r\nRUB\r\nPLN\r\nKHR\r\nBRL"
 jsystem_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt"
 jsystem_country: ''
+fghub_gaming_currency: "EUR\r\nUSD\r\nCNY\r\nRMB\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR"
+fghub_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\njp|ja\r\nkr|ko\r\nth|th\r\nvn|vi"
+fghub_gaming_country: ''
