--- a/web/sites/mobile-arcade/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_code.yml
+++ b/web/sites/mobile-arcade/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_code.yml
@@ -11,7 +11,7 @@ field_name: field_slider_game_code
 entity_type: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
 label: 'Game Code'
-description: "iCore game detail to use per provider:\r\n<ul>\r\n<li>Skywind: GameId</li>\r\n<li>Voidbridge: <b>GameId|ProviderProduct</b> (arcade, fish, games)</li>\r\n<li>CQ9: <b>External Game ID|ProviderProduct</b> (arcade, slots, fish)</li>\r\n<li>Solid Gaming: <b>External Game ID|ProviderProduct</b> (arcade, slots, fish)  \r\n<br><i>Note: You should prepend SG_ to all game codes</i></li>\r\n<li>Asia Gaming: <b>Game_ID|ProviderProduct</b> (arcade, games, slots, arcade-rng)</li>\r\n<li>SA Gaming: <b>Game_ID|ProviderProduct</b> (slots, arcade)</li>\r\n<li>Micro Gaming: <b>Game_ID|ProviderProduct</b> (games, arcade)</li>\r\n<li>JSystem: <b>External Game ID|ProviderProduct</b> (arcade, fish)</li>\r\n</ul>"
+description: "iCore game detail to use per provider:\r\n<ul>\r\n<li>Skywind: GameId</li>\r\n<li>Voidbridge: <b>GameId|ProviderProduct</b> (arcade, fish, games)</li>\r\n<li>CQ9: <b>External Game ID|ProviderProduct</b> (arcade, slots, fish)</li>\r\n<li>Solid Gaming: <b>External Game ID|ProviderProduct</b> (arcade, slots, fish)  \r\n<br><i>Note: You should prepend SG_ to all game codes</i></li>\r\n<li>Asia Gaming: <b>Game_ID|ProviderProduct</b> (arcade, games, slots, arcade-rng)</li>\r\n<li>SA Gaming: <b>Game_ID|ProviderProduct</b> (slots, arcade)</li>\r\n<li>Micro Gaming: <b>Game_ID|ProviderProduct</b> (games, arcade)</li>\r\n<li>JSystem: <b>External Game ID|ProviderProduct</b> (arcade, fish)</li>\r\n<li>FGHub Gaming: <b>External Game ID</b></li>\r\n</ul>"
 required: false
 translatable: false
 default_value: {  }
