--- a/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
@@ -56,6 +56,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: fghub_gaming
+      label: 'FGHub Gaming'
   allowed_values_function: ''
 module: options
 locked: false
