--- a/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -1203,6 +1203,20 @@ display:
       display_extenders: {  }
       path: api/mobile_game_list_v2
       sorts:
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
+          relationship: field_game_tag
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
+          plugin_id: standard
         field_game_title_value:
           id: field_game_title_value
           table: lucky_baby_mobile_games_entity__field_game_title
@@ -2198,7 +2212,16 @@ display:
         operator: AND
         groups:
           1: AND
-      relationships: {  }
+      relationships:
+        field_game_tag:
+          id: field_game_tag
+          table: lucky_baby_mobile_games_entity__field_game_tag
+          field: field_game_tag
+          relationship: none
+          group_type: group
+          admin_label: 'field_game_tag: Taxonomy term'
+          required: true
+          plugin_id: standard
     cache_metadata:
       max-age: -1
       contexts:
