--- a/web/sites/zipang-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -1241,7 +1241,16 @@ display:
     display_options:
       display_extenders: {  }
       path: api/mobile_game_list_v2
-      relationships: {  }
+      relationships:
+        field_game_tag:
+          id: field_game_tag
+          table: zipang_mobile_games_entity__field_game_tag
+          field: field_game_tag
+          relationship: none
+          group_type: group
+          admin_label: 'field_game_tag: Taxonomy term'
+          required: true
+          plugin_id: standard
       defaults:
         relationships: false
         fields: false
@@ -2289,6 +2298,20 @@ display:
         groups:
           1: AND
       sorts:
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
+          relationship: field_game_tag
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
+          plugin_id: standard
         field_game_title_value:
           id: field_game_title_value
           table: zipang_mobile_games_entity__field_game_title
