--- a/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
@@ -27,11 +27,11 @@ settings:
       value: solid_gaming
       label: 'Solid Gaming'
     -
-      value: flow_gaming
-      label: 'Flow Gaming'
-    -
       value: sa_gaming
       label: 'SA Gaming'
+    -
+      value: pg_soft
+      label: PGSoft
     -
       value: asia_gaming
       label: 'Asia Gaming'
@@ -42,14 +42,8 @@ settings:
       value: pas
       label: PAS
     -
-      value: pgsoft
-      label: PGSoft
-    -
-      value: onegame
-      label: 'One Game'
-    -
-      value: jsystem
-      label: JSystem
+      value: fghub_gaming
+      label: 'FGHub Gaming'
   allowed_values_function: ''
 module: options
 locked: false
