--- a/web/sites/mobile-games/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/mobile-games/config/sync/webcomposer_config.icore_games_integration.yml
@@ -90,9 +90,6 @@ micro_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko-KR\r\nvn|
 micro_gaming_country: ''
 asia_gaming_custom_lobbyDomain: ''
 asia_gaming_custom_lobbyDomain_enabled: 0
-flow_gaming_currency: "RMB\r\nCNY\r\nMYR\r\nTHB\r\nUSD\r\nINR\r\nKRW\r\nIDR\r\nVND"
-flow_gaming_language_mapping: "en|en\r\nsc|zh-cn\r\nth|th\r\nkr|ko-KR\r\nvn|vi\r\nid|id"
-flow_gaming_country: ''
 ky_gaming_currency: ''
 ky_gaming_language_mapping: ''
 ky_gaming_country: ''
@@ -119,3 +116,6 @@ onegame_country: ''
 jsystem_currency: "CNY\r\nRMB\r\nEUR\r\nJPY\r\nVND\r\nMYR\r\nIDR\r\nGBP\r\nTHB\r\nTRY\r\nmBC\r\nMMK\r\nINR\r\nRUB\r\nPLN\r\nKHR\r\nBRL"
 jsystem_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nvn|vi\r\nid|id\r\nes|ES\r\npt|pt"
 jsystem_country: ''
+fghub_gaming_currency: "EUR\r\nUSD\r\nCNY/RMB\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR"
+fghub_gaming_language_mapping: "en|en\r\nsc|zh-cn\r\njp|ja\r\nkr|ko\r\nth|th\r\nvn|vi"
+fghub_gaming_country: ''
