[DGMS-43 ]-DF Games Mobile FG Hub - Flow Gaming Integration fix field.storage.node.field_game_provider.yml file

--- a/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
@@ -30,9 +30,6 @@ settings:
       value: sa_gaming
       label: 'SA Gaming'
     -
-      value: pg_soft
-      label: PGSoft
-    -
       value: asia_gaming
       label: 'Asia Gaming'
     -
@@ -42,6 +39,15 @@ settings:
       value: pas
       label: PAS
     -
+      value: pgsoft
+      label: PGSoft
+    -
+      value: onegame
+      label: 'One Game'
+    -
+      value: jsystem
+      label: JSystem
+      -
       value: fghub_gaming
       label: 'FGHub Gaming'
   allowed_values_function: ''
