added gametag object in mobile gamelist view

--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -279,6 +279,9 @@ display:
             field_game_provider_export_1:
               alias: provider
               raw_output: false
+            field_game_tag_export_1:
+              alias: game_tag_object
+              raw_output: false
       fields:
         id:
           id: id
@@ -1333,6 +1336,73 @@ display:
           id: field_game_provider_export_1
           table: jamboree_mobile_games_entity__field_game_provider
           field: field_game_provider_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: id
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_tag_export_1:
+          id: field_game_tag_export_1
+          table: jamboree_mobile_games_entity__field_game_tag
+          field: field_game_tag_export
           relationship: none
           group_type: group
           admin_label: ''
