fix probel issue on field.storage.node.field_game_provider file

--- a/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
@@ -27,6 +27,9 @@ settings:
       value: solid_gaming
       label: 'Solid Gaming'
     -
+      value: flow_gaming
+      label: 'Flow Gaming'
+    -
       value: sa_gaming
       label: 'SA Gaming'
     -
@@ -47,7 +50,7 @@ settings:
     -
       value: jsystem
       label: JSystem
-      -
+    -
       value: fghub_gaming
       label: 'FGHub Gaming'
   allowed_values_function: ''
