--- a/web/sites/mobile-games/config/sync/field.storage.webcomposer_slider_v2_entity.field_slider_game_provider.yml
+++ b/web/sites/mobile-games/config/sync/field.storage.webcomposer_slider_v2_entity.field_slider_game_provider.yml
@@ -50,6 +50,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: fghub_gaming
+      label: 'FGHub Gaming'
   allowed_values_function: ''
 module: options
 locked: false
