--- a/web/sites/entrypage/config/sync/user.role.anonymous.yml
+++ b/web/sites/entrypage/config/sync/user.role.anonymous.yml
@@ -11,6 +11,8 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bn'
+  - 'access language bu'
   - 'access language el'
   - 'access language en'
   - 'access language es'
@@ -23,15 +25,15 @@ permissions:
   - 'access language id'
   - 'access language in'
   - 'access language ja'
+  - 'access language km'
   - 'access language ko'
+  - 'access language lo'
+  - 'access language pk'
   - 'access language pl'
   - 'access language pt-br'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
-  - 'access language lo'
-  - 'access language bu'
-  - 'access language km'
   - 'access language zh-hans'
   - 'access language zh-hant'
   - 'access site-wide contact form'
