--- a/web/sites/mobile-entrypage/config/sync/language.entity.pk.yml
+++ b/web/sites/mobile-entrypage/config/sync/language.entity.pk.yml
@@ -1,16 +1,15 @@
-uuid: 9fecafb9-1b90-4da9-bf0b-53c95e775be1
-langcode: bn
+uuid: 9e84790b-2215-459f-8d89-3e9f44705d73
+langcode: pk
 status: true
 dependencies:
   module:
     - webcomposer_language_hierarchy
 third_party_settings:
   webcomposer_language_hierarchy:
-    webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: 'English (Bangladesh)'
+    webcomposer_fallback_langcode: ''
     webcomposer_language_hidden: 0
-id: bn
-label: Bengali
+id: pk
+label: 'English (Pakistan)'
 direction: ltr
-weight: -2
+weight: -1
 locked: false
