[DFGMS-87][DFARC-49] Language config changes.

--- a/web/sites/games/config/sync/language.entity.pk.yml
+++ b/web/sites/games/config/sync/language.entity.pk.yml
@@ -1,5 +1,5 @@
-uuid: 137d1f42-d6e5-4614-8f14-9f4e131add19
-langcode: ur
+uuid: bcecf8bc-f896-4a0d-8b0f-43207f020f3d
+langcode: pk
 status: true
 dependencies:
   module:
@@ -7,10 +7,10 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: Urdu
+    webcomposer_language_custom_label: 'English (Pakistan)'
     webcomposer_language_hidden: 0
-id: ur
-label: Urdu
-direction: rtl
-weight: 15
+id: pk
+label: 'English (Pakistan)'
+direction: ltr
+weight: 8
 locked: false
