--- a/web/sites/mobile-games/config/sync/language.entity.pk.yml
+++ b/web/sites/mobile-games/config/sync/language.entity.pk.yml
@@ -1,5 +1,5 @@
-uuid: 26392185-536e-4ba7-bc86-5c8cd6dd7e18
-langcode: ur
+uuid: 52014870-b978-4606-882f-6e3782207081
+langcode: pk
 status: true
 dependencies:
   module:
@@ -7,10 +7,10 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: Urdu
+    webcomposer_language_custom_label: 'English (Pakistan)'
     webcomposer_language_hidden: 0
-id: ur
-label: Urdu
-direction: rtl
-weight: 5
+id: pk
+label: 'English (Pakistan)'
+direction: ltr
+weight: 6
 locked: false
