--- a/web/sites/mobile-live-dealer/config/sync/language.entity.pk.yml
+++ b/web/sites/mobile-live-dealer/config/sync/language.entity.pk.yml
@@ -1,5 +1,5 @@
-uuid: 4227b0ac-4dae-424d-9d08-1eaeff6341a6
-langcode: ur
+uuid: 08aa2c9b-6496-4704-a279-47738cda3003
+langcode: pk
 status: true
 dependencies:
   module:
@@ -7,10 +7,10 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: Urdu
+    webcomposer_language_custom_label: 'English (Pakistan)'
     webcomposer_language_hidden: 0
-id: ur
-label: Urdu
-direction: rtl
-weight: 0
+id: pk
+label: 'English (Pakistan)'
+direction: ltr
+weight: 3
 locked: false
