Created ALS Cookies module.

--- a/web/sites/777baby-casino/config/sync/core.extension.yml
+++ b/web/sites/777baby-casino/config/sync/core.extension.yml
@@ -56,6 +56,7 @@ module:
   lucky_baby_registration: 0
   lucky_baby_weekly_winner: 0
   luckybaby_dropdown_menu: 0
+  luckybaby_mobile_als: 0
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
