--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
@@ -14,10 +14,12 @@ dependencies:
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_code_icore
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_filter
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_filter_games
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_icon_label
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_provider
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_tag
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_thumbnail
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title_icon
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_type
     - image.style.thumbnail
   module:
@@ -66,6 +68,19 @@ third_party_settings:
         description: ''
         required_fields: false
       label: 'Arcade (for arcade page)'
+    group_live_games_for_live_games_:
+      children:
+        - field_game_title_icon
+        - field_game_icon_label
+      parent_name: ''
+      weight: 15
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: false
+      label: 'Live Games (for live games page)'
 id: jamboree_mobile_games_entity.jamboree_mobile_games_entity.default
 targetEntityType: jamboree_mobile_games_entity
 bundle: jamboree_mobile_games_entity
@@ -197,6 +212,14 @@ content:
           bundle: jamboree_mobile_games_entity
     type: erviews_options_select
     region: content
+  field_game_icon_label:
+    weight: 17
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_provider:
     weight: 10
     settings: {  }
@@ -224,6 +247,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_game_title_icon:
+    weight: 16
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
     region: content
   field_game_type:
     weight: 9
