--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -14,10 +14,12 @@ dependencies:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_code_icore
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_filter
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_filter_games
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_icon_label
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_provider
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_tag
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_thumbnail
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title_icon
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type
   module:
     - image
@@ -120,6 +122,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_game_icon_label:
+    weight: 18
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_game_provider:
     weight: 10
     label: above
@@ -152,6 +162,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_title_icon:
+    weight: 17
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_game_type:
     weight: 14
