--- a/web/sites/dafa-ghana/config/sync/language.content_settings.taxonomy_term.domain.yml
+++ b/web/sites/dafa-ghana/config/sync/language.content_settings.taxonomy_term.domain.yml
@@ -17,4 +17,4 @@ id: taxonomy_term.domain
 target_entity_type_id: taxonomy_term
 target_bundle: domain
 default_langcode: site_default
-language_alterable: true
+language_alterable: false
