--- a/web/sites/dafa-ghana/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap.yml
+++ b/web/sites/dafa-ghana/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap.yml
@@ -7,6 +7,12 @@ dependencies:
   module:
     - image
     - webcomposer_slider_v2
+third_party_settings:
+  content_translation:
+    translation_sync:
+      alt: alt
+      title: title
+      file: '0'
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap
 field_name: field_post_banner_image_landscap
 entity_type: webcomposer_slider_v2_entity
