--- a/web/sites/dafa-ghana/config/sync/language.content_settings.announcement_entity.announcement_entity.yml
+++ b/web/sites/dafa-ghana/config/sync/language.content_settings.announcement_entity.announcement_entity.yml
@@ -7,11 +7,11 @@ dependencies:
     - webcomposer_announcements
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
 id: announcement_entity.announcement_entity
 target_entity_type_id: announcement_entity
 target_bundle: announcement_entity
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
