--- a/web/sites/dafa-ghana/config/sync/webcomposer_config.announcements_configuration.yml
+++ b/web/sites/dafa-ghana/config/sync/webcomposer_config.announcements_configuration.yml
@@ -1,4 +1,6 @@
-title: 'Announcements Title'
-default_message: 'Announcements Default Message'
+title: Announcements
+default_message: 'There are no new announcements'
 _core:
   default_config_hash: z7-YoOL5He3EXNRbDh4J7N8hRFx2iMDWHGsvf7CDYtg
+see_all: 'See all'
+dismiss_all: Dismiss
