--- a/web/sites/dafa-ghana/config/sync/webcomposer_config.login_configuration.yml
+++ b/web/sites/dafa-ghana/config/sync/webcomposer_config.login_configuration.yml
@@ -1,13 +1,13 @@
-username_placeholder: 'Mobile Number'
+username_placeholder: 'Phone Number'
 password_placeholder: Password
 login_bottom_label: Login
-error_message_blank_username: 'Telephone Number is required.'
+error_message_blank_username: 'Username is required.'
 error_message_blank_password: 'Password is required.'
-error_message_blank_passname: 'Mobile Number and Password is required.'
-error_message_invalid_passname: 'Sorry the Mobile Number and Password you entered does not match. Please try again.'
+error_message_blank_passname: 'Username and Password is required.'
+error_message_invalid_passname: 'Sorry the Username and Password you entered does not match. Please try again.'
 error_message_service_not_available: 'Service not available.'
 error_message_account_suspended: 'Your account is locked. Please contact customer support.'
-error_message_account_locked: 'Your account has been locked due to failed login attempts. Please contact Customer Support.'
+error_message_account_locked: 'Your account is locked. Please contact customer support.'
 session_maxtime: '60'
 autologout_box_title: Reminder
 autologout_box_content:
@@ -20,13 +20,13 @@ notification_window_title: 'Session has timed out!'
 notification_content:
   value: "<p>Your session has timed out due to inactivity.</p>\r\n"
   format: basic_html
-lightbox_blurb: 'Not yet a Dafabet member?'
+lightbox_blurb: 'Login Lightbox blurb'
 mobile_login_url: 'https://m.dafabet.com/login'
 _core:
   default_config_hash: JKXRNDRNsdrQBSccXhaxXnC-LV2AwSK_fPLvRd-fVrQ
-advanced__active_tab: edit-login-form-details
+advanced__active_tab: edit-session-timeout-details
 rememberme_label: 'Remember Username'
-login_page_blurb: ''
+login_page_blurb: 'Login Page Blurb'
 value: null
 format: null
 mobile_login_button_label: Login
