--- a/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
@@ -59,6 +59,9 @@ settings:
     -
       value: fghub_gaming
       label: 'FGHub Gaming'
+    -
+      value: ruby_play
+      label: 'Ruby Play'
   allowed_values_function: ''
 module: options
 locked: false
