--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title_icon
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_type
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_provider_product
     - image.style.thumbnail
   module:
     - conditional_fields
@@ -35,7 +36,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -47,7 +48,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 12
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -60,7 +61,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -73,7 +74,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -88,7 +89,7 @@ mode: default
 content:
   field_all_games_category:
     type: options_select
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -258,6 +259,12 @@ content:
     region: content
   field_game_type:
     weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_provider_product:
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
