--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title_icon
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_provider_product
   module:
     - image
     - jamboree_desktop_games
@@ -174,6 +175,14 @@ content:
     region: content
   field_game_type:
     weight: 14
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_provider_product:
+    weight: 19
     label: above
     settings:
       link: true
