--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_title_icon
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_type
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_provider_product
   module:
     - image
     - jamboree_mobile_games
@@ -166,6 +167,14 @@ content:
     region: content
   field_game_type:
     weight: 17
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_provider_product:
+    weight: 20
     label: above
     settings:
       link: true
