--- a/web/sites/jamboree-casino/config/sync/jamboree_config.all_games_config.yml
+++ b/web/sites/jamboree-casino/config/sync/jamboree_config.all_games_config.yml
@@ -4,3 +4,7 @@ all_games_subtitle: 'More popular games and new ones are on the way!'
 all_games_blurb: 'Hello World!'
 all_games_show_more_label: 'show more -en'
 all_games_page_title: 'All Games-en | Jamboree Casino'
+all_games_searchbox_label: 'Game or Provider'
+all_games_available_label: Available
+all_games_view_all_label: 'View All'
+all_games_go_back_label: 'Go Back'
