--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.storage.jamboree_mobile_games_entity.field_game_title
     - field.storage.jamboree_mobile_games_entity.field_game_title_icon
     - field.storage.jamboree_mobile_games_entity.field_game_type
+    - field.storage.jamboree_mobile_games_entity.field_provider_product
   module:
     - jamboree_mobile_games
     - options
@@ -289,6 +290,9 @@ display:
               raw_output: false
             field_game_icon_label_export:
               alias: game_icon_label
+              raw_output: false
+            field_provider_product_export:
+              alias: provider_product
               raw_output: false
       fields:
         id:
@@ -1598,6 +1602,73 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_provider_product_export:
+          id: field_provider_product_export
+          table: jamboree_mobile_games_entity__field_provider_product
+          field: field_provider_product_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: 0
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       defaults:
         fields: false
         filters: false
@@ -1730,3 +1801,4 @@ display:
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_title'
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_title_icon'
         - 'config:field.storage.jamboree_mobile_games_entity.field_game_type'
+        - 'config:field.storage.jamboree_mobile_games_entity.field_provider_product'
